Add more test classes to secure more than 80% code coverage of business layer